Fix music page: Load only 6 releases initially, Load More fetches next 12

--- a/index.html
+++ b/index.html
@@ -77,22 +77,24 @@
                         <span class="ml-1">0</span>
                     </a>
                 </div>
-                <!-- Mobile menu button -->
-                <button class="md:hidden" id="mobile-menu-btn">
-                    <i class="fas fa-bars text-xl"></i>
-                </button>
+                <!-- Mobile: Cart and menu button -->
+                <div class="md:hidden flex items-center space-x-4">
+                    <a href="merch.html" class="font-normal">
+                        <i class="fas fa-shopping-cart"></i>
+                        <span class="ml-1">0</span>
+                    </a>
+                    <button id="mobile-menu-btn">
+                        <i class="fas fa-bars text-xl"></i>
+                    </button>
+                </div>
             </div>
             
             <!-- Mobile Menu -->
             <div id="mobile-menu" class="md:hidden border-t border-gray-200">
                 <div class="px-6 py-4 space-y-4">
                     <a href="music.html" class="block py-2">MUSIC</a>
-                    <a href="merch.html" class="block py-2">Merch / Sample Packs</a>
-                    <a href="index.html#contact" class="block py-2">CONTACT</a>
-                    <a href="merch.html" class="block py-2">
-                        <i class="fas fa-shopping-cart"></i>
-                        <span class="ml-1">0</span>
-                    </a>
+                    <a href="merch.html" class="block py-2">MERCH / SAMPLE PACKS</a>
+                    <a href="contact.html" class="block py-2">CONTACT</a>
                 </div>
             </div>
         </div>
