--- a/merch.html
+++ b/merch.html
@@ -105,12 +105,8 @@
             <div id="mobile-menu" class="md:hidden border-t border-gray-200">
                 <div class="px-6 py-4 space-y-4">
                     <a href="music.html" class="block py-2">MUSIC</a>
-                    <a href="merch.html" class="block py-2">Merch / Sample Packs</a>
-                    <a href="index.html#contact" class="block py-2">CONTACT</a>
-                    <button id="cart-toggle-mobile" class="block py-2 w-full text-left">
-                        <i class="fas fa-shopping-cart"></i>
-                        <span id="cart-count-mobile" class="ml-1">0</span>
-                    </button>
+                    <a href="merch.html" class="block py-2">MERCH / SAMPLE PACKS</a>
+                    <a href="contact.html" class="block py-2">CONTACT</a>
                 </div>
             </div>
         </div>
