Revert hero title to 'byJ.' and remove Times New Roman font

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-start">
                     <!-- Left: Biography Text -->
                     <div class="space-y-6">
-                        <h1 class="text-5xl font-bold mb-8 text-right lg:text-right" style="font-family: 'Times New Roman', Times, serif;">prod. byJ.</h1>
+                        <h1 class="text-5xl font-bold mb-8 text-right lg:text-right">byJ.</h1>
                         <p class="text-lg leading-relaxed">
                             From <strong>Baltimore to Los Angeles</strong>, byJ. is a music producer and audio engineer who treats sound like storytelling – flipping dusty samples, layering live instruments, and pushing mixes until they feel both <strong>cinematic and raw</strong>.
                         </p>
